--- a/index.html
+++ b/index.html
@@ -105,7 +105,29 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <div id="main_container">
+        <img
+          src="img\nithin-p-john-4mTU1ZQMVzQ-unsplash.jpg"
+          alt="a vegetable stall"
+          id="main_image"
+        />
+        <div id="company_info">
+          <h1>Fig and Pepper</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      <div id="carousel_container"></div>
+      <form id="mailing_list"></form>
+    </main>
 
     <footer></footer>
 
