add CSS for company information section

--- a/index.html
+++ b/index.html
@@ -106,12 +106,7 @@
     </header>
 
     <main>
-      <div id="main_container">
-        <img
-          src="img\nithin-p-john-4mTU1ZQMVzQ-unsplash.jpg"
-          alt="a vegetable stall"
-          id="main_image"
-        />
+      <div id="main_image">
         <div id="company_info">
           <h1>Fig and Pepper</h1>
           <p>
