--- a/index.html
+++ b/index.html
@@ -120,7 +120,56 @@
           </p>
         </div>
       </div>
-      <div id="carousel_container"></div>
+      <div id="carousel_container">
+        <!--Bootstrap image carousel:-->
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide"
+          data-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-interval="10000">
+              <img
+                src="img\Fig and Pepper Logo.png"
+                class="d-block w-100"
+                alt="Fig and Pepper logo"
+              />
+            </div>
+            <div class="carousel-item" data-interval="2000">
+              <img
+                src="img\hermes-rivera-aK6WGqxyHFw-unsplash.jpg"
+                class="d-block w-100"
+                alt="Bottles of wine"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img\sergio-arze-wJLGRhZsn5w-unsplash.jpg"
+                class="d-block w-100"
+                alt="A round loaf of bread"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-target="#carouselExampleInterval"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-target="#carouselExampleInterval"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </button>
+        </div>
+      </div>
       <form id="mailing_list"></form>
     </main>
 
