resize carousel images and edit layout

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
         </div>
       </div>
       <div id="carousel_container">
+        <img
+          id="cheeseboard_image"
+          src="img\lee-vue-P-oXFsK6STQ-unsplash.jpg"
+          alt="Three blocks of cheese and a bunch of red grapes on a round wooden board"
+        />
         <!--Bootstrap image carousel:-->
         <div
           id="carouselExampleInterval"
@@ -132,6 +137,7 @@
               <img
                 src="img\Fig and Pepper Logo.png"
                 class="d-block w-100"
+                class="carousel_image"
                 alt="Fig and Pepper logo"
               />
             </div>
@@ -139,6 +145,7 @@
               <img
                 src="img\hermes-rivera-aK6WGqxyHFw-unsplash.jpg"
                 class="d-block w-100"
+                class="carousel_image"
                 alt="Bottles of wine"
               />
             </div>
@@ -146,6 +153,7 @@
               <img
                 src="img\sergio-arze-wJLGRhZsn5w-unsplash.jpg"
                 class="d-block w-100"
+                class="carousel_image"
                 alt="A round loaf of bread"
               />
             </div>
@@ -169,6 +177,12 @@
             <span class="sr-only">Next</span>
           </button>
         </div>
+        <!--End of image carousel-->
+        <img
+          id="macarons_image"
+          src="img\heather-barnes-WbZesfqwR-A-unsplash.jpg"
+          alt="multicoloured macarons"
+        />
       </div>
       <form id="mailing_list"></form>
     </main>
