add mailing list form

--- a/index.html
+++ b/index.html
@@ -184,12 +184,19 @@
           alt="multicoloured macarons"
         />
       </div>
-      <form id="mailing_list"></form>
+      <form id="mailing_list">
+        <label>Join our mailing list:</label><br />
+        <input
+          type="text"
+          id="email"
+          name="email"
+          placeholder="Enter your email address"
+        />
+        <button>Submit</button>
+      </form>
     </main>
-
     <footer></footer>
-
-    <!--Bootstrap JavaScript link needs to go at the end of the body-->
+    <!--Bootstrap JavaScript link goes at the end of the body-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
