--- a/index.html
+++ b/index.html
@@ -195,7 +195,17 @@
         <button>Submit</button>
       </form>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="https://twitter.com/?lang=en-gb"
+        ><i class="fa-brands fa-square-twitter"></i
+      ></a>
+      <a href="https://en-gb.facebook.com/"
+        ><i class="fa-brands fa-square-facebook"></i
+      ></a>
+      <a href="https://www.instagram.com/"
+        ><i class="fa-brands fa-instagram"></i
+      ></a>
+    </footer>
     <!--Bootstrap JavaScript link goes at the end of the body-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
