--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body>
     <header>
-      <!--Bootstrap responsive navbar:-->
+      <!--Bootstrap navbar:-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"
           ><img
@@ -52,13 +52,6 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <!--
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            -->
             <li class="nav-item">
               <a class="nav-link" href="#">Log in/register</a>
             </li>
@@ -82,27 +75,15 @@
                 <a class="dropdown-item" href="#">Pasta</a>
               </div>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="#"
                 ><i class="fa-regular fa-cart-shopping"></i
               ></a>
-            </li>
+            </li>-->
           </ul>
-          <!--
-          <form class="form-inline my-2 my-lg-0">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
-          </form>
-          -->
         </div>
       </nav>
+      <!--End of navbar-->
     </header>
 
     <main>
