--- a/index.html
+++ b/index.html
@@ -4,25 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Bootstrap CSS link-->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <!--Ellie's link for Font Awesome:
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    -->
-    <!--New link for Font Awesome-->
+    <!--Font Awesome link-->
     <script
       src="https://kit.fontawesome.com/e02dd0949b.js"
       crossorigin="anonymous"
     ></script>
+    <!--CSS link-->
     <link rel="stylesheet" href="style.css" />
     <title>CFG Project</title>
   </head>
