change main image background and layout

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </header>
 
     <main>
-      <div id="main_image">
-        <div id="company_info">
+      <div id="background_image">
+        <div id="text_container">
           <h1>Fig and Pepper</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
