change carousel div classes and IDs

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div id="carousel_container">
         <img
-          id="cheeseboard_image"
+          class="carousel_side"
           src="img\lee-vue-P-oXFsK6STQ-unsplash.jpg"
           alt="Three blocks of cheese and a bunch of red grapes on a round wooden board"
         />
@@ -154,7 +154,7 @@
         </div>
         <!--End of image carousel-->
         <img
-          id="macarons_image"
+          class="carousel_side"
           src="img\heather-barnes-WbZesfqwR-A-unsplash.jpg"
           alt="multicoloured macarons"
         />
