edit carousel layout and sizing

--- a/index.html
+++ b/index.html
@@ -111,24 +111,21 @@
             <div class="carousel-item active" data-interval="10000">
               <img
                 src="img\Fig and Pepper Logo.png"
-                class="d-block w-100"
-                class="carousel_image"
+                class="d-block w-100 carousel_image"
                 alt="Fig and Pepper logo"
               />
             </div>
             <div class="carousel-item" data-interval="2000">
               <img
                 src="img\hermes-rivera-aK6WGqxyHFw-unsplash.jpg"
-                class="d-block w-100"
-                class="carousel_image"
+                class="d-block w-100 carousel_image"
                 alt="Bottles of wine"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="img\sergio-arze-wJLGRhZsn5w-unsplash.jpg"
-                class="d-block w-100"
-                class="carousel_image"
+                class="d-block w-100 carousel_image"
                 alt="A round loaf of bread"
               />
             </div>
