--- a/index.html
+++ b/index.html
@@ -156,16 +156,18 @@
           alt="multicoloured macarons"
         />
       </div>
-      <form id="mailing_list">
-        <label>Join our mailing list:</label><br />
-        <input
-          type="text"
-          id="email"
-          name="email"
-          placeholder="Enter your email address"
-        />
-        <button>Submit</button>
-      </form>
+      <div id="form_container">
+        <form id="mailing_list">
+          <label>Join our mailing list:</label><br />
+          <input
+            type="text"
+            id="email"
+            name="email"
+            placeholder="Enter your email address"
+          />
+          <button id="mailing_submit">Submit</button>
+        </form>
+      </div>
     </main>
     <footer>
       <a href="https://twitter.com/?lang=en-gb"
