--- a/index.html
+++ b/index.html
@@ -169,16 +169,18 @@
         </form>
       </div>
     </main>
-    <footer>
-      <a href="https://twitter.com/?lang=en-gb"
-        ><i class="fa-brands fa-square-twitter"></i
-      ></a>
-      <a href="https://en-gb.facebook.com/"
-        ><i class="fa-brands fa-square-facebook"></i
-      ></a>
-      <a href="https://www.instagram.com/"
-        ><i class="fa-brands fa-instagram"></i
-      ></a>
+    <footer id="landing_footer">
+      <div id="social_media">
+        <a href="https://twitter.com/?lang=en-gb"
+          ><i class="fa-brands fa-square-twitter"></i
+        ></a>
+        <a href="https://en-gb.facebook.com/"
+          ><i class="fa-brands fa-square-facebook"></i
+        ></a>
+        <a href="https://www.instagram.com/"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+      </div>
     </footer>
     <!--Bootstrap JavaScript link goes at the end of the body-->
     <script
