add javascript alert to shopping cart icon

--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
               <a class="nav-link" href="#"
-                ><img id="cart_icon" src="img\cart4.svg" alt="Shopping cart icon"/></i
-              ></a>
+                ><img
+                  id="cart_icon"
+                  src="img\cart4.svg"
+                  alt="Shopping cart icon"
+                  onclick="cartAlert()"
+              /></a>
             </li>
           </ul>
         </div>
@@ -206,5 +210,6 @@
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js"></script>
   </body>
 </html>
