change font on logo and website

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       src="https://kit.fontawesome.com/e02dd0949b.js"
       crossorigin="anonymous"
     ></script>
+    <!--Google Font link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap"
+      rel="stylesheet"
+    />
     <!--CSS link-->
     <link rel="stylesheet" href="style.css" />
     <title>CFG Project</title>
@@ -26,10 +33,7 @@
       <!--Bootstrap navbar:-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="#"
-          ><img
-            id="company_logo"
-            src="img\Fig and Pepper Logo.png"
-            alt="Fig and Pepper logo"
+          ><img id="company_logo" src="img\Logo.png" alt="Fig and Pepper logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -122,7 +126,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="10000">
               <img
-                src="img\Fig and Pepper Logo.png"
+                src="img\Logo.png"
                 class="d-block w-100 carousel_image"
                 alt="Fig and Pepper logo"
               />
@@ -168,6 +172,7 @@
           alt="multicoloured macarons"
         />
       </div>
+      <!--Mailing list-->
       <div id="form_container">
         <form id="mailing_list">
           <label>Join our mailing list:</label><br />
@@ -175,12 +180,13 @@
             type="text"
             id="email"
             name="email"
-            placeholder="Enter your email address"
+            placeholder="Email address"
           />
           <button id="mailing_submit">Submit</button>
         </form>
       </div>
     </main>
+    <!--Social media links-->
     <footer id="landing_footer">
       <div id="social_media">
         <a href="https://twitter.com/?lang=en-gb"
@@ -194,7 +200,7 @@
         ></a>
       </div>
     </footer>
-    <!--Bootstrap JavaScript link goes at the end of the body-->
+    <!--Bootstrap JavaScript link-->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -210,6 +216,7 @@
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
+    <!--JavaScript link-->
     <script src="main.js"></script>
   </body>
 </html>
