--- a/index.html
+++ b/index.html
@@ -101,13 +101,17 @@
         <div id="text_container">
           <h1>Fig and Pepper</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat. Duis aute irure dolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            culpa qui officia deserunt mollit anim id est laborum.-->
+            Fresh, locally sourced produce delivered to your door. Try our award
+            winning cheeses, treat yourself to one of our handmade cakes or whip
+            up a quick dinner with our pasta range. We also cater events and
+            parties.
           </p>
         </div>
       </div>
