organise images into a folder and update file pathways in HTML

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <!--Bootstrap navbar:-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="#"
-          ><img id="company_logo" src="img\Logo.png" alt="Fig and Pepper logo"
+          ><img
+            id="company_logo"
+            src="img\landing_page\Logo.png
+          "
+            alt="Fig and Pepper logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -85,7 +89,7 @@
               <a class="nav-link" href="#"
                 ><img
                   id="cart_icon"
-                  src="img\cart4.svg"
+                  src="img\landing_page\cart4.svg"
                   alt="Shopping cart icon"
                   onclick="cartAlert()"
               /></a>
@@ -101,13 +105,6 @@
         <div id="text_container">
           <h1>Fig and Pepper</h1>
           <p>
-            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.-->
             Fresh, locally sourced produce delivered to your door. Try our award
             winning cheeses, treat yourself to one of our handmade cakes or whip
             up a quick dinner with our pasta range. We also cater events and
@@ -118,7 +115,7 @@
       <div id="carousel_container">
         <img
           class="carousel_side"
-          src="img\lee-vue-P-oXFsK6STQ-unsplash.jpg"
+          src="img\landing_page\lee-vue-P-oXFsK6STQ-unsplash.jpg"
           alt="Three blocks of cheese and a bunch of red grapes on a round wooden board"
         />
         <!--Bootstrap image carousel:-->
@@ -130,21 +127,22 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="10000">
               <img
-                src="img\Logo.png"
+                src="img\landing_page\Logo.png
+                "
                 class="d-block w-100 carousel_image"
                 alt="Fig and Pepper logo"
               />
             </div>
             <div class="carousel-item" data-interval="2000">
               <img
-                src="img\hermes-rivera-aK6WGqxyHFw-unsplash.jpg"
+                src="img\landing_page\hermes-rivera-aK6WGqxyHFw-unsplash.jpg"
                 class="d-block w-100 carousel_image"
                 alt="Bottles of wine"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="img\sergio-arze-wJLGRhZsn5w-unsplash.jpg"
+                src="img\landing_page\sergio-arze-wJLGRhZsn5w-unsplash.jpg"
                 class="d-block w-100 carousel_image"
                 alt="A round loaf of bread"
               />
@@ -172,7 +170,7 @@
         <!--End of image carousel-->
         <img
           class="carousel_side"
-          src="img\heather-barnes-WbZesfqwR-A-unsplash.jpg"
+          src="img\landing_page\heather-barnes-WbZesfqwR-A-unsplash.jpg"
           alt="multicoloured macarons"
         />
       </div>
