--- a/register.html
+++ b/register.html
@@ -70,9 +70,13 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Vegetables</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Bakery</a>
+                <a class="dropdown-item" href="#">Bread</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Cakes</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Pasta</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Cheese</a>
               </div>
             </li>
           </ul>
