start ading content to fruit product cards

--- a/products.html
+++ b/products.html
@@ -96,42 +96,45 @@
       <!--End of navbar-->
     </header>
     <!--Product category-->
-    <h4 id="category_title">Product category</h4>
+    <h4 id="category_title">Fruit</h4>
     <!--Product card-->
     <div class="product_category">
       <div class="card">
-        <img src="..." class="card-img-top" alt="..." />
+        <img
+          src="img\products_page\amit-lahav-rxN2MRdFJVg-unsplash.jpg"
+          class="card-img-top"
+          alt="A red apple"
+        />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Braeburn apples</h5>
+          <p class="card-text">40p each</p>
+          <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
       </div>
       <!--Product card-->
       <div class="card">
-        <img src="..." class="card-img-top" alt="..." />
+        <img
+          src="img\products_page\ava-tyler-6BjP8AN7PBc-unsplash.jpg"
+          class="card-img-top"
+          alt="Peaches"
+        />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Peaches</h5>
+          <p class="card-text">TBC each</p>
+          <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
       </div>
       <!--Product card-->
       <div class="card">
-        <img src="..." class="card-img-top" alt="..." />
+        <img
+          src="img\products_page\quaritsch-photography-lZ8onQ1wuY8-unsplash.jpg"
+          class="card-img-top"
+          alt="Two cherries"
+        />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Cherries</h5>
+          <p class="card-text">TBC per kg</p>
+          <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
       </div>
       <!--Product card-->
