replace image in carousel

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             </div>
             <div class="carousel-item" data-interval="2000">
               <img
-                src="img\landing_page\hermes-rivera-aK6WGqxyHFw-unsplash.jpg"
+                src="img\landing_page\clark-douglas-17ZU9BPy_Q4-unsplash.jpg"
                 class="d-block w-100 carousel_image"
-                alt="Bottles of wine"
+                alt="Bowl of spaghetti on a woodentable with a glass of wine and cutlery"
               />
             </div>
             <div class="carousel-item">
