stick navbar to the top of the page and activate all navbar links on all pages

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <body>
     <header>
       <!--Bootstrap navbar:-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <a class="navbar-brand" href="#"
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+        <a class="navbar-brand"
           ><img
             id="company_logo"
             src="img\landing_page\Logo.png
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Log in/register</a>
+              <a class="nav-link" href="./register.html">Log in/register</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -67,17 +67,19 @@
                 Products
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Fruit</a>
+                <a class="dropdown-item" href="products.html#fruit">Fruit</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Vegetables</a>
+                <a class="dropdown-item" href="products.html#vegetables"
+                  >Vegetables</a
+                >
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Bread</a>
+                <a class="dropdown-item" href="products.html#bread">Bread</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Cakes</a>
+                <a class="dropdown-item" href="products.html#cakes">Cakes</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Pasta</a>
+                <a class="dropdown-item" href="products.html#pasta">Pasta</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Cheese</a>
+                <a class="dropdown-item" href="products.html#cheese">Cheese</a>
               </div>
             </li>
           </ul>
