--- a/products.html
+++ b/products.html
@@ -123,7 +123,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img
             src="img\products_page\ava-tyler-6BjP8AN7PBc-unsplash.jpg"
             class="card-img-top"
@@ -146,7 +146,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img
             src="img\products_page\quaritsch-photography-lZ8onQ1wuY8-unsplash.jpg"
             class="card-img-top"
@@ -169,7 +169,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -188,7 +188,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -215,7 +215,7 @@
       <h4 id="category_title">Vegetables</h4>
       <!--Product card-->
       <div class="product_category">
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -234,7 +234,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -253,7 +253,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -272,7 +272,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -291,7 +291,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -318,7 +318,7 @@
       <h4 id="category_title">Bread</h4>
       <!--Product card-->
       <div class="product_category">
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -337,7 +337,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -356,7 +356,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -375,7 +375,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -394,7 +394,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -421,7 +421,7 @@
       <h4 id="category_title">Cakes</h4>
       <!--Product card-->
       <div class="product_category">
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -440,7 +440,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -459,7 +459,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -478,7 +478,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -497,7 +497,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -524,7 +524,7 @@
       <h4 id="category_title">Pasta</h4>
       <!--Product card-->
       <div class="product_category">
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -543,7 +543,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -562,7 +562,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -581,7 +581,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -600,7 +600,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -627,7 +627,7 @@
       <h4 id="category_title">Cheese</h4>
       <!--Product card-->
       <div class="product_category">
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -646,7 +646,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -665,7 +665,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -684,7 +684,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -703,7 +703,7 @@
           </div>
         </div>
         <!--Product card-->
-        <div class="card">
+        <div class="card text-center">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
