add content to product cards in fruit section and vegetable section

--- a/products.html
+++ b/products.html
@@ -102,13 +102,36 @@
       <div class="product_category">
         <div class="card text-center">
           <img
-            src="img\products_page\amit-lahav-rxN2MRdFJVg-unsplash.jpg"
+            src="img\products_page\javier-balseiro-jNi2SefV6bc-unsplash.jpg"
             class="card-img-top"
-            alt="A red apple"
+            alt="A pile of red apples"
           />
           <div class="card-body">
-            <h5 class="card-title">Braeburn apples</h5>
+            <h5 class="card-title">Apples</h5>
             <p class="card-text">40p each</p>
+            <!--Quantity dropdown box-->
+            <label for="quantity">Quantity:</label>
+            <select name="quantity" class="quantity">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+            <!--Box ends-->
+            <a href="#" class="btn btn-primary">Add to cart</a>
+          </div>
+        </div>
+        <!--Product card-->
+        <div class="card text-center">
+          <img
+            src="img\products_page\jonathan-mast-RW6Wz9QaoKk-unsplash.jpg"
+            class="card-img-top"
+            alt="Boxes of green pears"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Pears</h5>
+            <p class="card-text">45p each</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -131,7 +154,7 @@
           />
           <div class="card-body">
             <h5 class="card-title">Peaches</h5>
-            <p class="card-text">TBC each</p>
+            <p class="card-text">35p each</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -148,13 +171,13 @@
         <!--Product card-->
         <div class="card text-center">
           <img
-            src="img\products_page\quaritsch-photography-lZ8onQ1wuY8-unsplash.jpg"
+            src="img\products_page\joanna-kosinska-_xN7UbcZ33I-unsplash.jpg"
             class="card-img-top"
-            alt="Two cherries"
+            alt="A pile of cherries"
           />
           <div class="card-body">
             <h5 class="card-title">Cherries</h5>
-            <p class="card-text">TBC per kg</p>
+            <p class="card-text">£3.00 per 200g</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -170,10 +193,14 @@
         </div>
         <!--Product card-->
         <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="img\products_page\nick-sarro-qydnkODHMo4-unsplash.jpg"
+            class="card-img-top"
+            alt="Basket of blackberries"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
+            <h5 class="card-title">Blackberries</h5>
+            <p class="card-text">£2.75 per 200g</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -184,26 +211,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <!--Product card-->
-        <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
-            <!--Quantity dropdown box-->
-            <label for="quantity">Quantity:</label>
-            <select name="quantity" class="quantity">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-            <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
       </div>
@@ -216,10 +224,14 @@
       <!--Product card-->
       <div class="product_category">
         <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="img\products_page\keenan-sultanik-oxXUePN3u4Q-unsplash.jpg"
+            class="card-img-top"
+            alt="A small pumpkn"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
+            <h5 class="card-title">Pumpkins</h5>
+            <p class="card-text">£1.50 each</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -230,15 +242,19 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
         <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="img\products_page\gabriel-gurrola-fcgPRZmTM5w-unsplash.jpg"
+            class="card-img-top"
+            alt="A bunch of carrots"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
+            <h5 class="card-title">Carrots</h5>
+            <p class="card-text">50p per 500g</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -249,15 +265,19 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
         <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="C:\Users\cprie\CFGWebDev\CFGProject\img\products_page\tyrrell-fitness-and-nutrition-jSQxj-Ug0H8-unsplash.jpg"
+            class="card-img-top"
+            alt="A bowl of broccoli florets"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
+            <h5 class="card-title">Broccoli</h5>
+            <p class="card-text">£2.00 each</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -268,15 +288,19 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
         <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="img\products_page\waldemar-brandt-Ql9oYxramg0-unsplash.jpg"
+            class="card-img-top"
+            alt="Pile of button mushrooms"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
+            <h5 class="card-title">Mushrooms</h5>
+            <p class="card-text">£1.20 per 250g</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -287,15 +311,19 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
         <div class="card text-center">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src="img\products_page\emma-jane-hobden-lFxgx7Snyfw-unsplash.jpg"
+            class="card-img-top"
+            alt="Four whole beetroot with stalks and leaves"
+          />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">example text</p>
+            <h5 class="card-title">Beetroot</h5>
+            <p class="card-text">£1.50 per 500g</p>
             <!--Quantity dropdown box-->
             <label for="quantity">Quantity:</label>
             <select name="quantity" class="quantity">
@@ -306,7 +334,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
       </div>
@@ -333,7 +361,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -352,7 +380,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -371,7 +399,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -390,7 +418,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <!--Product card-->
@@ -409,7 +437,7 @@
               <option value="5">5</option>
             </select>
             <!--Box ends-->
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">GAdd to cart</a>
           </div>
         </div>
       </div>
